# diffusers-rs

./: .gitignore  Cargo.toml  Instructions to prepare environment with conda.txt  README.md
.github/workflows/: rust-ci.yml
examples/: tensor-tools.rs
examples/controlnet/: main.rs
examples/stable-diffusion/: main.rs
examples/stable-diffusion-2/: main.rs
examples/stable-diffusion-img2img/: main.rs
examples/stable-diffusion-inpaint/: main.rs
scripts/: download_weights.sh  download_weights_1.5.sh  download_weights_2.1.sh  get_weights.py
src/: lib.rs  utils.rs
src/models/: attention.rs  controlnet.rs  embeddings.rs  mod.rs  resnet.rs  unet_2d.rs  unet_2d_blocks.rs  vae.rs
src/pipelines/: mod.rs  stable_diffusion.rs  stable_diffusion_v1_5.rs  stable_diffusion_v2_1.rs
src/schedulers/: ddim.rs  ddpm.rs  dpmsolver.rs  dpmsolver_multistep.rs  dpmsolver_singlestep.rs  euler_ancestral_discrete.rs  euler_discrete.rs  heun_discrete.rs  integrate.rs  k_dpm_2_ancestral_discrete.rs  k_dpm_2_discrete.rs  lms_discrete.rs  mod.rs  pndm.rs
src/transformers/: clip.rs  mod.rs
