[package]
name = "diffusers"
version = "0.3.0"
authors = ["Laurent Mazare <lmazare@gmail.com>"]
edition = "2021"
build = "build.rs"

description = "Rust implementation of the Diffusers library using Torch."
repository = "https://github.com/LaurentMazare/diffusers-rs"
keywords = ["pytorch", "deep-learning", "machine-learning", "diffusion", "transformers"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

exclude = [
    "media/*",
]

[dependencies]
anyhow = "1"
thiserror = "1"
regex = "1.6.0"
tch = "0.13"
torch-sys = { version = "0.13", features = ["download-libtorch"] }

clap = { version = "4.0.19", optional = true, features = ["derive"] }

[[example]]
name = "stable-diffusion"
required-features = ["clap"]

[[example]]
name = "stable-diffusion-img2img"
required-features = ["clap"]

[[example]]
name = "stable-diffusion-inpaint"
required-features = ["clap"]

[features]
doc-only = ["tch/doc-only"]

[package.metadata.docs.rs]
features = ["doc-only"]
